--- a/wagtail_landing/templates/base.html
+++ b/wagtail_landing/templates/base.html
@@ -30,36 +30,40 @@
 
         <div class="line-orange"></div>
 
+        <div class="content-page-background">
+
         <div class="align-top">
             <div class="row">
               <div class="col-sm-12">
               
-                <div class="main-header p-5 bg-primary text-white text-center">
+                <div class="main-header p-3 text-white text-center">
                   <div class="container">
                     <div class="row">
-                      <div class="col">
-                          <img src="{% static 'images/Logo-01.png' %}" alt="Fjords" style="width:60%">
+                      <div class="col-xs-12 col-sm-6">
+                          <img class="landing-logo" src="{% static 'images/Logo-01.png' %}" alt="">
                       </div>
-                      <div class="col">
+                      <div class="col-xs-12 col-sm-6 social-buttons">
                         <div class="container">
-                          <div class="row">
-                            <div class="col">
-                              1 of 3
-                            </div>
-                            <div class="col">
-                              2 of 3
-                            </div>
-                            <div class="col">
-                              3 of 3
-                            </div>
-                          </div>
+                            <a href="#" class="fa fa-instagram-b"></a>
+                            <a href="#" class="fa fa-twitter-b"></a>
+                            <a href="#" class="fa fa-facebook-b"></a>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
 
+                <div class="row">
+
+                <button class="navbar-toggler landing-page-toggle-button" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <i class="fa fa-bars" aria-hidden="true"></i>
+                </button>
           
+
+                <div class="collapse navbar-collapse nav-list-collapse" id="navbarSupportedContent">
+
+          
+
                 <nav class="navbar navbar-expand-sm justify-content-center">
                   <ul class="navbar-nav">
                     <li class="nav-item">
@@ -79,7 +83,9 @@
                     </li>
                   </ul>
                 </nav>
+                </div>
           
+              </div>
               </div>
           
             </div>
