button added to content page

--- a/wagtail_landing/templates/home/home_page.html
+++ b/wagtail_landing/templates/home/home_page.html
@@ -25,7 +25,7 @@
             their Elders past, present and emerging.
         </div>
         <div class="modal-footer" style="border-top: none;">
-          <button type="button" class="btn btn-primary home-page-button" style="margin:auto"><a href="/gambling-content">dddddddddd</a>Go to site</button>
+          <a href="/gambling-content" class="btn btn-primary home-page-button" style="margin:auto">Go to site</a>
           
         </div>
       </div>
