--- a/gambling_landing/templates/gambling_landing/gambling_page.html
+++ b/gambling_landing/templates/gambling_landing/gambling_page.html
@@ -5,7 +5,6 @@
 {% block content %}
 
 
-<img src="{% static 'images/Background-Pattern~1.png' %}" alt="" style="width:100%">
 <div class="sub-bg">
 <div class=" container">
   <div class="row">
@@ -17,6 +16,15 @@
             
           </div>
           <div class="col-6">
+
+
+            <div class="btn-group" role="group" aria-label="Basic mixed styles example">
+              <button type="button" class="btn btn-danger">Left</button>
+              <button type="button" class="btn btn-warning">Middle</button>
+              <button type="button" class="btn btn-success">Right</button>
+            </div>
+
+
             <div class="container">
 
               <h1>Header</h1>
@@ -26,8 +34,11 @@
 
 
 
+              <div class="container">
 
               <div class="row row-cols-3">
+
+                
       
                 <div class="col">
                   <div class="card shadow-sm">
@@ -80,6 +91,10 @@
                 </div>
       
               </div>
+
+            </div>
+
+
             </div>
           </div>
           <div class="col">
@@ -99,7 +114,7 @@
 </div>
 
 
-<div class="footer-bg">
+<div class="footer-bg ">
 <div class="container">
   <footer class="py-3 my-4 ">
     <div class="container">
@@ -117,7 +132,7 @@
           <p style="text-align: left;">free, confidential, 24/7 gambling helpline</p>
         </div>
         <div class="col-2">
-          <div class="footer-img"></div>
+          <div class="footer-img "></div>
         </div>
       </div>
     
