content page css fixing

--- a/gambling_landing/templates/gambling_landing/gambling_page.html
+++ b/gambling_landing/templates/gambling_landing/gambling_page.html
@@ -5,116 +5,126 @@
 {% block content %}
 
 
+<div class="container">
+
 <div class="sub-bg">
-<div class=" container">
-  <div class="row">
-    <div class="col-sm-12">
 
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            
+
+ 
+  <div class="container">
+    <div class="row justify-content-md-center">
+     
+      <div class="col-md-auto">
+        <div class="container">
+
+          <div class="contentpage_header">
+
+            <h1>Header</h1>
+
+
+            <p class="contentpage_sub_header">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget erat tortor. Nam a tellus laoreet,
+              ornare arcua, interdum mi. Vivamus in vestibulum lorem. Cras ut viverra justo. Integer eu nulla nulla.</p>
+
           </div>
-          <div class="col-6">
-
-
-            <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-              <button type="button" class="btn btn-danger">Left</button>
-              <button type="button" class="btn btn-warning">Middle</button>
-              <button type="button" class="btn btn-success">Right</button>
-            </div>
-
 
             <div class="container">
-
-              <h1>Header</h1>
-
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget erat tortor. Nam a tellus laoreet,
-                ornare arcua, interdum mi. Vivamus in vestibulum lorem. Cras ut viverra justo. Integer eu nulla nulla.</p>
-
-
-
-              <div class="container">
-
-              <div class="row row-cols-3">
-
-                
-      
-                <div class="col">
-                  <div class="card shadow-sm">
-                    <img src="{% static 'images/content/Money freedom-01~1.jpg' %}" alt="Fjords" style="width:100%">
-      
-                    <div class="card-body">
-                      <p class="card-text">Money freedom</p>
-                    </div>
-                  </div>
+              <div class="row align-items-start">
+          
+                <div class="btn-group" role="group" aria-label="Basic mixed styles example">
+                  <button type="button" class="btn btn-primary content-b-one">Financial wellbeing</button>
+                  <button type="button" class="btn content-b-two">Alternative activities</button>
+                  <button type="button" class="btn content-b-three">Self care and time out</button>
+                  <button type="button" class="btn content-b-four"></button>
                 </div>
-      
-                <div class="col">
-                  <div class="card shadow-sm">
-                    <img src="{% static 'images/content/Stories-01~1.jpg' %}" alt="Fjords" style="width:100%">
-      
-                    <div class="card-body">
-                      <p class="card-text">Stories</p>
-                    </div>
-                  </div>
-                </div>
-      
-                <div class="col">
-                  <div class="card shadow-sm">
-                    <img src="{% static 'images/content/Money Knowledge-01~1.jpg' %}" alt="Fjords" style="width:100%">
-      
-                    <div class="card-body">
-                      <p class="card-text">Money knowledge</p>
-                    </div>
-                  </div>
-                </div>
-      
-                <div class="col">
-                  <div class="card shadow-sm">
-                    <img src="{% static 'images/content/Safer gambling strategies-01~1.jpg' %}" alt="Fjords" style="width:100%">
-      
-                    <div class="card-body">
-                      <p class="card-text">Safer Gambling strategies</p>
-                    </div>
-                  </div>
-                </div>
-      
-                <div class="col">
-                  <div class="card shadow-sm">
-                    <img src="{% static 'images/content/Where does the money go-01~1.jpg' %}" alt="Fjords" style="width:100%">
-      
-                    <div class="card-body">
-                      <p class="card-text">Where does the money go</p>
-                    </div>
-                  </div>
-                </div>
-      
+           
               </div>
-
+           
             </div>
+          
 
 
-            </div>
-          </div>
-          <div class="col">
+          <div class="container">
+
+          <div class="row row-cols-3">
+
             
-          </div>
-        </div>
   
+            <div class="col">
+
+              <div class="card shadow-sm">
+              
+                <img class="card-grid-one" alt="" style="width:100%">
+  
+                <img class="" src="{% static 'images/content/Money freedom-01~1.jpg' %}" alt="" style="width:100%">
+  
+                <div class="card-body">
+                  <p class="card-text">Money freedom</p>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col">
+              <div class="card shadow-sm">
+                <img src="{% static 'images/content/Stories-01~1.jpg' %}" alt="" style="width:100%">
+  
+                <div class="card-body">
+                  <p class="card-text">Stories</p>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col">
+              <div class="card shadow-sm">
+                <img src="{% static 'images/content/Money Knowledge-01~1.jpg' %}" alt="" style="width:100%">
+  
+                <div class="card-body">
+                  <p class="card-text">Money knowledge</p>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col">
+              <div class="card shadow-sm">
+                <img src="{% static 'images/content/Safer gambling strategies-01~1.jpg' %}" alt="" style="width:100%">
+  
+                <div class="card-body">
+                  <p class="card-text">Safer Gambling strategies</p>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col">
+              <div class="card shadow-sm">
+                <img src="{% static 'images/content/Where does the money go-01~1.jpg' %}" alt="Fjords" style="width:100%">
+  
+                <div class="card-body">
+                  <p class="card-text">Where does the money go</p>
+                </div>
+              </div>
+            </div>
+  
+          </div>
+
+        </div>
+
+
+        </div>
       </div>
-
-
-
-      
+     
     </div>
-
   </div>
+
+
+
+
+
 </div>
+
 </div>
 
 
-<div class="footer-bg ">
+
+<div class="footer-bg">
 <div class="container">
   <footer class="py-3 my-4 ">
     <div class="container">
