--- a/wagtail_landing/static/css/wagtail_landing.css
+++ b/wagtail_landing/static/css/wagtail_landing.css
@@ -11412,8 +11412,15 @@ nav a:hover::after {
 .sub-bg {
   position: relative;
   background-image: url('../images/Background-Pattern~1.png');
+
+  height: 150vh; 
+
+  background-position: center;
   background-repeat: no-repeat;
+  background-size: cover;
 }
+
+
 
 .card-body {
   background-color: yellow;
@@ -11554,8 +11561,20 @@ background-repeat: no-repeat;
 background-size: cover;
 }
 
+
+.card-grid-one{
+  background-image: url("../images/content/Money\ freedom-01~1.jpg");
+}
+
+
+
+
 .home-page-container {
     height: 50vh;
+}
+
+.content-page-container {
+  height: 200vh;
 }
 
 .home-page-button {
@@ -11569,6 +11588,56 @@ background-size: cover;
     height: 55px;
     font-weight: 700;
 }
+
+.content-b-one {
+  border: none;
+  border-radius: 0px;
+  background-color: #ffffff;
+  color: #000;
+  margin: auto;
+  align-content: center;
+  width: 110px;
+  height: 55px;
+  font-weight: 700;
+}
+
+.content-b-two {
+  border: none;
+  border-radius: 0px;
+  background-color: #b3b300;
+  color: #000;
+  margin: auto;
+  align-content: center;
+  width: 110px;
+  height: 55px;
+  font-weight: 700;
+}
+
+.content-b-three {
+  border: none;
+  border-radius: 0px;
+  background-color: #54d2d2;
+  color: #000;
+  margin: auto;
+  align-content: center;
+  width: 110px;
+  height: 55px;
+  font-weight: 400;
+}
+
+.content-b-four {
+  border: none;
+  border-radius: 0px;
+  background-color: #f0f0f0;
+  color: #000;
+  margin: auto;
+  align-content: center;
+  width: 110px;
+  height: 55px;
+  font-weight: 700;
+}
+
+
 
 .homePageModal {
     background-color: #ede3c3;
@@ -11635,6 +11704,21 @@ background-size: cover;
       color: white;
       margin: 10vh auto 5vh;
   }
+
+  .contentpage_header{
+    width: 100vw;
+    text-align: left;
+    color: black;
+    margin:10vh auto 10vh;
+}
+
+.contentpage_sub_header{
+  width: 100vw;
+  text-align: justify;
+  color: black;
+  margin:5vh auto 5vh;
+}
+
   
   .home-model{
       background-color: rgba(255,255,255, 0.5);
