--- a/gambling_landing/templates/gambling_landing/gambling_page.html
+++ b/gambling_landing/templates/gambling_landing/gambling_page.html
@@ -5,7 +5,6 @@
 {% block content %}
 
 
-<div class="container">
 
 <div class="sub-bg">
 
@@ -27,8 +26,9 @@
 
           </div>
 
+
             <div class="container">
-              <div class="row align-items-start">
+              <!-- <div class="row align-items-start">
           
                 <div class="btn-group" role="group" aria-label="Basic mixed styles example">
                   <button type="button" class="btn btn-primary content-b-one">Financial wellbeing</button>
@@ -37,75 +37,286 @@
                   <button type="button" class="btn content-b-four"></button>
                 </div>
            
+              </div> -->
+
+
+              <div class="tab">
+                <button class="tablinks content-b-one" onclick="openCity(event, 'content-one')">Financial wellbeing</button>
+                <button class="tablinks content-b-two" onclick="openCity(event, 'content-two')">Alternative activities</button>
+                <button class="tablinks content-b-three" onclick="openCity(event, 'content-three')">Self care and time out</button>
+                <button class="tablinks content-b-four" onclick="openCity(event, 'content-four')">Tab Four</button>
               </div>
+              
+              <div id="content-one" class="tabcontent">
+                <div class="container">
+
+                  <div class="row row-cols-3">
+        
+                    
+          
+                    <div class="col">
+        
+                      <div class="card shadow-sm">
+                      
+                        <img class="card-grid-one" alt="" style="width:100%">
+          
+                        <img src="{% static 'images/content/Stories-01~1.jpg' %}" alt="" style="width:100%">
+          
+                        <div class="card-body">
+                          <p class="card-text">Money freedom</p>
+                        </div>
+                      </div>
+                    </div>
+          
+                    <div class="col">
+                      <div class="card shadow-sm">
+                        <img src="{% static 'images/content/Stories-01~1.jpg' %}" alt="" style="width:100%">
+          
+                        <div class="card-body">
+                          <p class="card-text">Stories</p>
+                        </div>
+                      </div>
+                    </div>
+          
+                    <div class="col">
+                      <div class="card shadow-sm">
+                        <img src="{% static 'images/content/Stories-01~1.jpg' %}" alt="" style="width:100%">
+          
+                        <div class="card-body">
+                          <p class="card-text">Money knowledge</p>
+                        </div>
+                      </div>
+                    </div>
+          
+                    <div class="col">
+                      <div class="card shadow-sm">
+                        <img src="{% static 'images/content/Stories-01~1.jpg'' %}" alt="" style="width:100%">
+          
+                        <div class="card-body">
+                          <p class="card-text">Safer Gambling strategies</p>
+                        </div>
+                      </div>
+                    </div>
+          
+                    <div class="col">
+                      <div class="card shadow-sm">
+                        <img src="{% static 'images/content/Stories-01~1.jpg' %}" alt="Fjords" style="width:100%">
+          
+                        <div class="card-body">
+                          <p class="card-text">Where does the money go</p>
+                        </div>
+                      </div>
+                    </div>
+          
+                  </div>
+        
+                </div>
+              </div>
+              
+              <div id="content-two" class="tabcontent">
+                <div class="container">
+
+                  <div class="row row-cols-3">
+        
+                    
+          
+                    <div class="col">
+        
+                      <div class="card shadow-sm">
+                      
+                        <img class="card-grid-one" alt="" style="width:100%">
+          
+                        <!-- <img src="{% static 'images/content/Stories-01~1.jpg' %}" alt="" style="width:100%"> -->
+          
+                        <div class="card-body">
+                          <p class="card-text">Alternative activities</p>
+                        </div>
+                      </div>
+                    </div>
+          
+                    <div class="col">
+                      <div class="card shadow-sm">
+                        <!-- <img src="{% static 'images/content/Stories-01~1.jpg' %}" alt="" style="width:100%"> -->
+          
+                        <div class="card-body">
+                          <p class="card-text">Alternative activities</p>
+                        </div>
+                      </div>
+                    </div>
+          
+                    <div class="col">
+                      <div class="card shadow-sm">
+                        <!-- <img src="{% static 'images/content/Stories-01~1.jpg' %}" alt="" style="width:100%"> -->
+          
+                        <div class="card-body">
+                          <p class="card-text">Alternative activities</p>
+                        </div>
+                      </div>
+                    </div>
+          
+                    <div class="col">
+                      <div class="card shadow-sm">
+                        <!-- <img src="{% static 'images/content/Stories-01~1.jpg'' %}" alt="" style="width:100%"> -->
+          
+                        <div class="card-body">
+                          <p class="card-text">Alternative activities</p>
+                        </div>
+                      </div>
+                    </div>
+          
+                    <div class="col">
+                      <div class="card shadow-sm">
+                        <!-- <img src="{% static 'images/content/Stories-01~1.jpg' %}" alt="Fjords" style="width:100%"> -->
+          
+                        <div class="card-body">
+                          <p class="card-text">Alternative activities</p>
+                        </div>
+                      </div>
+                    </div>
+          
+                  </div>
+        
+                </div>
+              </div>
+              
+              <div id="content-three" class="tabcontent">
+                <div class="container">
+
+                  <div class="row row-cols-3">
+        
+                    
+          
+                    <div class="col">
+        
+                      <div class="card shadow-sm">
+                      
+                        <img class="card-grid-one" alt="" style="width:100%">
+          
+                        <!-- <img src="{% static 'images/content/Stories-01~1.jpg' %}" alt="" style="width:100%"> -->
+          
+                        <div class="card-body">
+                          <p class="card-text">Self care and time out</p>
+                        </div>
+                      </div>
+                    </div>
+          
+                    <div class="col">
+                      <div class="card shadow-sm">
+                        <!-- <img src="{% static 'images/content/Stories-01~1.jpg' %}" alt="" style="width:100%"> -->
+          
+                        <div class="card-body">
+                          <p class="card-text">Self care and time out</p>
+                        </div>
+                      </div>
+                    </div>
+          
+                    <div class="col">
+                      <div class="card shadow-sm">
+                        <!-- <img src="{% static 'images/content/Stories-01~1.jpg' %}" alt="" style="width:100%"> -->
+          
+                        <div class="card-body">
+                          <p class="card-text">Self care and time out</p>
+                        </div>
+                      </div>
+                    </div>
+          
+                    <div class="col">
+                      <div class="card shadow-sm">
+                        <!-- <img src="{% static 'images/content/Stories-01~1.jpg'' %}" alt="" style="width:100%"> -->
+          
+                        <div class="card-body">
+                          <p class="card-text">Self care and time out</p>
+                        </div>
+                      </div>
+                    </div>
+          
+                    <div class="col">
+                      <div class="card shadow-sm">
+                        <!-- <img src="{% static 'images/content/Stories-01~1.jpg' %}" alt="Fjords" style="width:100%"> -->
+          
+                        <div class="card-body">
+                          <p class="card-text">Self care and time out</p>
+                        </div>
+                      </div>
+                    </div>
+          
+                  </div>
+        
+                </div>
+              </div>
+
+              <div id="content-four" class="tabcontent">
+                <div class="container">
+
+                  <div class="row row-cols-3">
+        
+                    
+          
+                    <div class="col">
+        
+                      <div class="card shadow-sm">
+                      
+                        <img class="card-grid-one" alt="" style="width:100%">
+          
+                        <!-- <img src="{% static 'images/content/Stories-01~1.jpg' %}" alt="" style="width:100%"> -->
+          
+                        <div class="card-body">
+                          <p class="card-text">Tab Four</p>
+                        </div>
+                      </div>
+                    </div>
+          
+                    <div class="col">
+                      <div class="card shadow-sm">
+                        <!-- <img src="{% static 'images/content/Stories-01~1.jpg' %}" alt="" style="width:100%"> -->
+          
+                        <div class="card-body">
+                          <p class="card-text">Tab Four</p>
+                        </div>
+                      </div>
+                    </div>
+          
+                    <div class="col">
+                      <div class="card shadow-sm">
+                        <!-- <img src="{% static 'images/content/Stories-01~1.jpg' %}" alt="" style="width:100%"> -->
+          
+                        <div class="card-body">
+                          <p class="card-text">Tab Four</p>
+                        </div>
+                      </div>
+                    </div>
+          
+                    <div class="col">
+                      <div class="card shadow-sm">
+                        <!-- <img src="{% static 'images/content/Stories-01~1.jpg'' %}" alt="" style="width:100%"> -->
+          
+                        <div class="card-body">
+                          <p class="card-text">Tab Four</p>
+                        </div>
+                      </div>
+                    </div>
+          
+                    <div class="col">
+                      <div class="card shadow-sm">
+                        <!-- <img src="{% static 'images/content/Stories-01~1.jpg' %}" alt="Fjords" style="width:100%"> -->
+          
+                        <div class="card-body">
+                          <p class="card-text">Tab Four</p>
+                        </div>
+                      </div>
+                    </div>
+          
+                  </div>
+        
+                </div>
+              </div>
+
+
            
             </div>
-          
 
 
-          <div class="container">
-
-          <div class="row row-cols-3">
-
-            
-  
-            <div class="col">
-
-              <div class="card shadow-sm">
-              
-                <img class="card-grid-one" alt="" style="width:100%">
-  
-                <img class="" src="{% static 'images/content/Money freedom-01~1.jpg' %}" alt="" style="width:100%">
-  
-                <div class="card-body">
-                  <p class="card-text">Money freedom</p>
-                </div>
-              </div>
-            </div>
-  
-            <div class="col">
-              <div class="card shadow-sm">
-                <img src="{% static 'images/content/Stories-01~1.jpg' %}" alt="" style="width:100%">
-  
-                <div class="card-body">
-                  <p class="card-text">Stories</p>
-                </div>
-              </div>
-            </div>
-  
-            <div class="col">
-              <div class="card shadow-sm">
-                <img src="{% static 'images/content/Money Knowledge-01~1.jpg' %}" alt="" style="width:100%">
-  
-                <div class="card-body">
-                  <p class="card-text">Money knowledge</p>
-                </div>
-              </div>
-            </div>
-  
-            <div class="col">
-              <div class="card shadow-sm">
-                <img src="{% static 'images/content/Safer gambling strategies-01~1.jpg' %}" alt="" style="width:100%">
-  
-                <div class="card-body">
-                  <p class="card-text">Safer Gambling strategies</p>
-                </div>
-              </div>
-            </div>
-  
-            <div class="col">
-              <div class="card shadow-sm">
-                <img src="{% static 'images/content/Where does the money go-01~1.jpg' %}" alt="Fjords" style="width:100%">
-  
-                <div class="card-body">
-                  <p class="card-text">Where does the money go</p>
-                </div>
-              </div>
-            </div>
-  
-          </div>
-
-        </div>
+       
 
 
         </div>
@@ -120,7 +331,6 @@
 
 </div>
 
-</div>
 
 
 
