--- a/wagtail_landing/templates/base.html
+++ b/wagtail_landing/templates/base.html
@@ -18,6 +18,7 @@
 
         {# Global stylesheets #}
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="{% static 'css/wagtail_landing.css' %}">
 
         {% block extra_css %}
@@ -55,7 +56,7 @@
 
                 <div class="row">
 
-                <button class="navbar-toggler landing-page-toggle-button" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler content-page-toggle-button" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <i class="fa fa-bars" aria-hidden="true"></i>
                 </button>
           
