content page missing content fixed

--- a/wagtail_landing/templates/base.html
+++ b/wagtail_landing/templates/base.html
@@ -33,7 +33,7 @@
 
         <div class="content-page-background">
 
-        <div class="align-top">
+        <div class="align-top content-page--header-background">
             <div class="row">
               <div class="col-sm-12">
               
@@ -45,9 +45,9 @@
                       </div>
                       <div class="col-xs-12 col-sm-6 social-buttons">
                         <div class="container">
-                            <a href="#" class="fa fa-instagram-b"></a>
-                            <a href="#" class="fa fa-twitter-b"></a>
-                            <a href="#" class="fa fa-facebook-b"></a>
+                            <a href="#" class="fa fa-instagram icon-black"></a>
+                            <a href="#" class="fa fa-twitter icon-black"></a>
+                            <a href="#" class="fa fa-facebook icon-black"></a>
                         </div>
                       </div>
                     </div>
