--- a/wagtail_landing/static/css/wagtail_landing.css
+++ b/wagtail_landing/static/css/wagtail_landing.css
@@ -11416,7 +11416,7 @@ body {
 }
 
 #wrapper {
-  /* background-color: #e3f2fd; */
+  background-color: transparent;
   min-height: 100%;
   height: auto !important;
   margin-bottom: -50px; /* the bottom margin is the negative value of the footer's total height */
@@ -11434,13 +11434,11 @@ body {
 
 .sub-bg {
   position: relative;
-  background-image: url('../images/Background-Pattern~1.png');
-
-  height: 150vh; 
+  background-image: url('../images/Background-Pattern_1.jpg');
 
   background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-repeat: repeat-y;
+  background-size: contain;
 }
 
 
@@ -11487,7 +11485,7 @@ body {
 
 .footer-bg {
   /* height: 400px; */
-	background: url('../images/footer/Footer\ Oattern.png') center center;
+	background: url('../images/footer/Footer_pattern.png') center center;
 	background-size: cover;
 	background-color: #ddd;
   width: 100%;
@@ -11496,10 +11494,16 @@ body {
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
+.footer-container{
+  padding: 0px 2rem;
+}
+
 .footer-img {
-  background: url('../images/footer/Footer\ Logo-01~1.png') center center;
-  background-size: cover;
-  height: 70px;
+  width: 10vw;
+}
+
+.footer-text{
+  size: 0rem;
 }
 
 .line-orange {
@@ -11573,16 +11577,23 @@ body {
 
 .content-page-background{
   /* The image used */
-background-image: url("../images/Background-Pattern-Header~1.png");
+background-image: url("../images/Background-Pattern-Header_1.png");
 
 /* Full height */
 height: 99vh; 
 
 /* Center and scale the image nicely */
-z-index: 2;
+
 background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
+}
+
+.content-page--header-background {
+  background-image: url("../images/Background-Pattern-Header_1.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 
@@ -11613,78 +11624,58 @@ background-size: cover;
     font-weight: 700;
 }
 
-.content-b-one {
+.content-tab {
+  display: inline-table;
+   width: 100%;
+    padding: 0px;
+}
+
+.content-b {
+  display: table-cell;
+  text-align: center;
+  height: 100%;
   border: none;
   border-radius: 0px;
+  margin: auto;
+  padding: 14px 16px;
+}
+
+.b-one {
   background-color: #ffffff;
-  margin: auto;
 }
 
-.content-b-two {
-  border: none;
-  border-radius: 0px;
+.b-two {
   background-color: #b3b300;
-  margin: auto;
 }
 
-.content-b-three {
-  border: none;
-  border-radius: 0px;
+.b-three {
   background-color: #54d2d2;
-  color: #000;
-  margin: auto;
-  align-content: center;
 }
 
-.content-b-four {
-  border: none;
-  border-radius: 0px;
+.b-four {
   background-color: #f0f0f0;
-  color: #000;
-  margin: auto;
-  align-content: center;
 }
 
+
+.tab-bg{
+  background-color: #fff;
+}
 
 
 .homePageModal {
     background-color: #ede3c3;
 }
 
-.fa-facebook {
+  .icon-white{
     text-decoration: none;
     padding: 10px;
-    color: white;
+    color: #fff;
   }
 
-  .fa-twitter {
+  .icon-black{
     text-decoration: none;
     padding: 10px;
-    color: white;
-  }
-
-  .fa-instagram {
-    text-decoration: none;
-    padding: 10px;
-    color: white;
-  }
-
-  .fa-facebook-b {
-    text-decoration: none;
-    padding: 10px;
-    color: black;
-  }
-
-  .fa-twitter-b {
-    text-decoration: none;
-    padding: 10px;
-    color: black;
-  }
-
-  .fa-instagram-b {
-    text-decoration: none;
-    padding: 10px;
-    color: black;
+    color: #000;
   }
 
   .social-buttons {
@@ -11751,12 +11742,15 @@ background-size: cover;
 }
 
 
+
 /* Style the tab */
 .tab {
   overflow: hidden;
   background-color: #fff;
   justify-content: center;
 }
+
+
 
 /* Style the buttons inside the tab */
 .tab button {
@@ -11793,3 +11787,26 @@ background-size: cover;
   position: relative;
 }
 
+.space-around {
+  width: 400px;
+  height: 150px;
+  border: 1px solid #666;
+  display: -webkit-flex;
+  -webkit-justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
+}
+.space-around div {
+  width: 70px;
+  height: 70px;
+  background-color: #ccc;
+  border: 1px solid #666;
+}
+
+.tab-images {
+}
+
+.tab-one-item{
+  margin: 10px 0px;
+  padding: 15px;
+}
