--- a/wagtail_landing/templates/landing_base.html
+++ b/wagtail_landing/templates/landing_base.html
@@ -46,9 +46,9 @@
                       </div>
                       <div class="col-xs-12 col-sm-6 social-buttons">
                         <div class="container">
-                            <a href="#" class="fa fa-instagram"></a>
-                            <a href="#" class="fa fa-twitter"></a>
-                            <a href="#" class="fa fa-facebook"></a>
+                            <a href="#" class="fa fa-instagram icon-white"></a>
+                            <a href="#" class="fa fa-twitter icon-white"></a>
+                            <a href="#" class="fa fa-facebook icon-white"></a>
                         </div>
                       </div>
                     </div>
