social media icon missing fixed

--- a/gambling_landing/templates/gambling_landing/gambling_page.html
+++ b/gambling_landing/templates/gambling_landing/gambling_page.html
@@ -360,11 +360,13 @@
       
       <div class="row">
         <div class="col-3">
-          <div class="col-lg-3 my-3 my-lg-0">
-            <a class="btn btn-social mx-2" href="#!"><i class="fab fa-twitter icon-black"></i></a>
-            <a class="btn btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-            <a class="btn btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
-        </div>
+          <div class="col-xs-12 col-sm-6 social-buttons">
+            <div class="container">
+                <a href="#" class="fa fa-instagram icon-footer"></a>
+                <a href="#" class="fa fa-twitter icon-footer"></a>
+                <a href="#" class="fa fa-facebook icon-footer"></a>
+            </div>
+          </div>
         </div>
         <div class="col-7">
 
